examples/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiledash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiledash
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tiledash
    spec:
      containers:
        - name: tiledash
          image: ghcr.io/gi8lino/tiledash:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            timeoutSeconds: 2
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 30
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
          volumeMounts:
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
            - name: templates
              mountPath: /templates
      volumes:
        - name: config
          configMap:
            name: tiledash-config
            defaultMode: 0755
        - name: templates
          configMap:
            name: tiledash-templates
            defaultMode: 0755
