examples/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jirapanel
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app: jirapanel
